--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -184,7 +184,7 @@
                             </a>
                           <% end %>
 
-                          <section class="full-explanation">
+                          <section class="full-explanation" data-target="promises--overview.explanationHtml">
                             <%= raw(to_lazy_loading_iframes_and_images(statement.assessment.explanation_html)) %>
                           </section>
                         </div>
