Remove meta viewport for admin, it is not responsive

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="cs">
   <head>
-    <title>Administrace &mdash; Demagog.cz &mdash; <%= content_for?(:title) ? yield(:title) : 'Factcheck politických diskuzí' %></title>
+    <title>Administrace ᗧ··•··ᗣ·· Demagog.cz</title>
     <%= csrf_meta_tags %>
-
-    <meta name="author" content="Demagog.cz" >
-    <meta name="web_author" content="Demagog2 Dev Team — github.com/Demagog2">
-    <meta name="author" content="Demagog.cz" >
-    <meta name="description" content="Politici operují s informacemi, které jsou zkreslené, účelově vytrhávané z původních kontextů, neúplné anebo přímo lživé. Moderátor o tom často nevědí, protože jim chybějí informace a nedokážou efektivně a jednoznačně oponovat. Projekt Demagog.cz má za cíl kontrolu těchto tvrzení.">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#f04124"/>
-
     <%= stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <link rel="shortcut icon" href="<%= asset_path("favicon.png") %>" type="image/x-icon" />
