--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -20,20 +20,12 @@
     </p>
   </aside>
 
-  <%#
   <aside class="organizations" id="ifcn">
     <h2>Práce projektu Demagog.cz je ověřena International Fact-Checking Network</h2>
-    <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="b23c71e2-230f-4d9b-94d2-b58c46339200"></div>
-    <script type="text/javascript">
-      (function() {
-        var s = document.createElement('script');
-        s.type = 'text/javascript';
-        s.async = true;
-        s.src = 'https://cdn.youracclaim.com/assets/utilities/embed.js';
-        var o = document.getElementsByTagName('script')[0];
-        o.parentNode.insertBefore(s, o);
-        })();
-    </script>
+    <p>
+      <a href="https://ifcncodeofprinciples.poynter.org/profile/demagogcz" title="IFCN signatory" target="_blank">
+        <img src="https://cdn.ifcncodeofprinciples.poynter.org/storage/badges/36C9D629-AED1-C760-8B88-9FD45DD9156F.png" style="max-width:100%" />
+      </a>
+    </p>
   </aside>
-  %>
 </div>
