--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -453,6 +453,11 @@ article.preview {
   }
 }
 
+article.detail .intro .article-factcheck-video {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 #facebook {
   overflow: hidden;
 }
