Fix ending quote character

--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -161,7 +161,7 @@
                   <div class="hiding-container">
                     <div class="promise-detail">
                       <blockquote class="content">
-                        <p>„<%= content_to_html(statement.content) %>‟</p>
+                        <p>„<%= content_to_html(statement.content) %>“</p>
                         <cite><a href="<%= @get_statement_source_url.call(statement) %>" target="_blank"><%= @get_statement_source_label.call(statement) %></a></cite>
                       </blockquote>
                       <div class="assessment">
