--- a/app/views/homepage/_references.html.erb
+++ b/app/views/homepage/_references.html.erb
@@ -3,18 +3,18 @@
     <figure><img src="http://demagog.sk/static/images/referencie/michal_havran_ml.jpg" alt="Michal Havran ml."></figure>
     <h4><a href="http://www.jetotak.sk/" title="Michal Havran ml.">Michal Havran ml. </a></h4>
     <p class="position">Slovenský syndikát novinárov</p>
-    <p>„Demagog.sk ukazuje, že politické lži sú pre politikov častokrát jediným spôsobom, ako hovoriť s voličmi. Demagóg ukázal, že politici nás považujú za príliš slabých nato, aby sme počúvali pravdu. Demagóg a jeho čitatelia dokazujú opak. Nechceme milosrdnú lož, chceme poznať pravdu."</p>
+    <p>„Demagog.sk ukazuje, že politické lži sú pre politikov častokrát jediným spôsobom, ako hovoriť s voličmi. Demagóg ukázal, že politici nás považujú za príliš slabých nato, aby sme počúvali pravdu. Demagóg a jeho čitatelia dokazujú opak. Nechceme milosrdnú lož, chceme poznať pravdu.“</p>
   </div>
   <div>
     <figure><img src="http://demagog.sk/static/images/referencie/marian_lesko.jpg" alt="Marián Leško"></figure>
     <h4><a href="http://www.sme.sk/autor_info.asp?id=1" title="Marián Leško">Marián Leško </a></h4>
     <p class="position">autor komentárov pre týždenník Trend</p>
-    <p>„Projekt Demagog.sk som si všimol už v čase, keď ešte nebol ani projektom. Ako každý, aj ja mám rád, keď časť mojej práce za mňa vykoná niekto iný. A páči sa mi, že ju vykoná tak, ako by som ju chcel robiť aj ja sám. Keby ste neboli, chýbali by ste mi."</p>
+    <p>„Projekt Demagog.sk som si všimol už v čase, keď ešte nebol ani projektom. Ako každý, aj ja mám rád, keď časť mojej práce za mňa vykoná niekto iný. A páči sa mi, že ju vykoná tak, ako by som ju chcel robiť aj ja sám. Keby ste neboli, chýbali by ste mi.“</p>
   </div>
   <div>
     <figure><img src="http://demagog.sk/static/images/referencie/gabriel_sipos.jpg" alt="Gabriel Šipoš"></figure>
     <h4><a href="http://spw.blog.sme.sk/" title="Gabriel Šipoš">Gabriel Šipoš</a></h4>
     <p class="position">Transparency International Slovensko</p>
-    <p>„Ak chceme, aby v televíznych politických diskusiách nevyhrával najkrajšie oblečený ci najplynulejší rečník, ale najpravdovravejší, treba verejnosti aj novinárom pomôcť s faktickou kontrolou výrokov. Nik to u nás nerobí dôslednejšie ako Demagog.sk."</p>
+    <p>„Ak chceme, aby v televíznych politických diskusiách nevyhrával najkrajšie oblečený ci najplynulejší rečník, ale najpravdovravejší, treba verejnosti aj novinárom pomôcť s faktickou kontrolou výrokov. Nik to u nás nerobí dôslednejšie ako Demagog.sk.“</p>
   </div>
 </aside>
