Add data migration for existing video marks

--- a/app/views/article/index.html.erb
+++ b/app/views/article/index.html.erb
@@ -18,7 +18,7 @@
 
       <% if show_article_factcheck_video(@article) %>
         <div id="article-factcheck-video-app-root" class="article-factcheck-video">
-          <img src="<%= url_for(@article.illustration) %>" alt="Ilustrační obrázek k výstupu <%= @article.title %>">
+<!--          <img src="<%#= url_for(@article.illustration) %>" alt="Ilustrační obrázek k výstupu <%#= @article.title %>">-->
         </div>
       <% end %>
     <% end %>
