Fix promises og:image

--- a/app/views/promises/document.html.erb
+++ b/app/views/promises/document.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title, "Programové prohlášení druhé vlády Andreje Babiše") %>
 <% content_for(:description, "Sliby vlády sledované projektem Demagog.cz v kontextu celého programového prohlášení") %>
 <% content_for(:viewport, "width=980") %>
-<% content_for(:image_src, asset_url("vladni-sliby-og-image.jpg")) %>
+<% content_for(:image_src, asset_url("vladni-sliby-og-image.png")) %>
 
 <%= content_tag :div, id: "promises-document-app-root", data: { statements: @statements_data, pages_by_id: @pages_by_id } do %>
 <% end %>
