Update donations copy

--- a/app/views/homepage/_darujme.html.erb
+++ b/app/views/homepage/_darujme.html.erb
@@ -1,7 +1,7 @@
 <aside id="darujme-widget" class="box" data-theme="dark">
   <h2>Podpořte Demagog.cz</h2>
 
-  <p class="disclaimer">Demagog.cz není finančně ani jinak navázán na žádnou politickou stranu či politickou zájmovou skupinu. Pro zajištění nezávislosti a udržitelnosti je financován z více zdrojů.  Jednorázovým či pravidelným příspěvkem můžete pomoci Demagog.cz také vy.</p>
+  <p class="disclaimer">Demagog.cz funguje díky podpoře od čtenářů jako jste vy. Přispějte prosím na kvalitní factcheck českých politiků i v roce 2020. Trváme na naší nezávislosti, a proto nepřijímáme podporu od politických stran a zájmových skupin. Podpora od čtenářů je pro nás klíčová, jen tak můžeme dlouhodobě hlídat politická tvrzení. Děkujeme.</p>
 
   <div data-darujme-widget-token="cal3h1ohu4dkri5u">&nbsp;</div>
   <script type="text/javascript">
