Donate changes and subscribing to newsletter

--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -9,6 +9,7 @@
 @import "layout";
 
 @import "homepage/cover_story";
+@import "homepage/homepage_donate_and_subscribe";
 @import "homepage/promises";
 
 @import "page/show";
@@ -19,6 +20,7 @@
 
 @import "search/index";
 
+@import "shared/donate_and_subscribe";
 @import "shared/nav";
 @import "shared/partners";
 @import "shared/speaker_stat";
