--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -3,7 +3,7 @@
 
 <% if @interesting_statements %>
   <%= render partial: "interesting_statements" %>
-  <%= render partial: "darujme" %>
+  <%= render partial: "homepage_donate_and_subscribe" %>
 <% end %>
 
 <% if @page_number %>
