--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
       <%= yield %>
 
+      <%= render partial: "shared/donate_and_subscribe" %>
       <%= render partial: "shared/partners" %>
     </div>
       
