--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -13,40 +13,58 @@
 
   <div class="rest">
     <div class="speakers">
+      <% if article.article_type.name == "default" %>
         <% for speaker in article.unique_speakers %>
           <%= render(partial: 'shared/portrait', object: speaker, as: :speaker) %>
         <% end %>
+      <% end %>
+      <% if article.article_type.name == "single_statement" %>
+        <%= render(partial: 'shared/portrait', object: article.single_statement.speaker, as: :speaker) %>
+      <% end %>
     </div>
 
     <h2 class="s-title"><%= link_to(article.title, article_path(article), class: "title") %></h2>
 
     <p class="clickthrough">
-      <span class="label <%= article.article_type.name == "default" ? "factcheck" : "editorial" %>">
-        <% if article.article_type.name == "default" %>
-            Ověřeno
-        <% end %>
-        <% if article.article_type.name == "static" %>
-            Komentář
-        <% end %>
-      </span>
-
-      <% if article.article_type.name == "default" && article.source %>
+      <% if article.article_type.name == "default" %>
+        <span class="label factcheck">Ověřeno</span>
+        <% if article.source %>
           <i><%= article.source.medium.name %>, <%= raw(l(article.source.released_at, format: :long)) %></i>
+        <% end %>
       <% end %>
 
       <% if article.article_type.name == "static" %>
+        <span class="label editorial">Komentář</span>
         <i><%= raw(l(article.published_at, format: :long)) %></i>
+      <% end %>
+
+      <% if article.article_type.name == "single_statement" %>
+        <span class="label veracity <%= article.single_statement.approved_assessment.veracity.default_name %>">
+          <%= article.single_statement.approved_assessment.veracity.name %>
+        </span>
+        <i><%= article.single_statement.source.medium.name %>, <%= raw(l(article.single_statement.source.released_at, format: :long)) %></i>
       <% end %>
 
       <% if article.perex %>
         &mdash;
-
         <%= strip_tags(article.perex).truncate(230) %>
       <% end %>
 
-      <a href="<%= article_path(article) %>">
+      <% if article.article_type.name == "single_statement" %>
+        &mdash;
+        „<%= article.single_statement.content.strip %>“
+      <% end %>
+
+      <% if article.article_type.name == "default" || article.article_type.name == "static" %>
+        <a href="<%= article_path(article) %>">
           <span>Číst&nbsp;dál&nbsp;&rarr;</span>
-      </a>
+        </a>
+      <% end %>
+      <% if article.article_type.name == "single_statement" %>
+        <a href="<%= statement_path(article.single_statement) %>">
+          <span>Číst&nbsp;odůvodnění&nbsp;&rarr;</span>
+        </a>
+      <% end %>
     </p>
   </div>
 </article>
