--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -41,11 +41,13 @@
       </section>
     </article>
 
-    <aside>
-      <h1>Výrok jsme zmínili</h1>
-      <% @statement.mentioning_articles.each do |article| %>
-        <%= render(partial: 'article/preview', object: article, as: :article) %>
-      <% end %>
-    </aside>
+    <% if @statement.mentioning_articles.size > 0 %>
+      <aside>
+        <h1>Výrok jsme zmínili</h1>
+        <% @statement.mentioning_articles.each do |article| %>
+          <%= render(partial: 'article/preview', object: article, as: :article) %>
+        <% end %>
+      </aside>
+    <% end %>
   </div>
 </section>
