--- a/app/assets/stylesheets/homepage/_cover_story.scss
+++ b/app/assets/stylesheets/homepage/_cover_story.scss
@@ -51,6 +51,16 @@
       .label {
         margin-right: 2px;
       }
+
+      .veracity {
+        @include veracity;
+
+        position: relative;
+        top: 1px;
+
+        font-weight: bold;
+        margin-right: 2px;
+      }
     }
 
     .perex {
