--- a/app/views/homepage/_cover_story.html.erb
+++ b/app/views/homepage/_cover_story.html.erb
@@ -5,8 +5,8 @@
         <img src="<%= polymorphic_url(@cover_story.illustration, only_path: true) %>" alt="<%= @cover_story.title %>" />
         <% if show_article_factcheck_video(@cover_story) %>
           <div class="factcheck-video-label">
-            <img src="<%= asset_path("play-icon.svg") %>" class="factcheck-video-label-play-icon" alt="Spustit videozáznam">
-            <span class="factcheck-video-label-text">Videozáznam propojený s ověřením</span>
+            <img src="<%= asset_path("play-icon.svg") %>" class="factcheck-video-label-play-icon" alt="Spustit <%= article_factcheck_video_record_name(@cover_story) %>">
+            <span class="factcheck-video-label-text"><%= article_factcheck_video_record_name(@cover_story).capitalize %> propojený s ověřením</span>
           </div>
         <% end %>
       </a>
