Fix footer link to transparent accountw

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer data-theme="dark">
   <div class="container">
-    <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Roháčova 145/14, Žižkov, 130 00 Praha 3 zapsaný ve spolkovém rejstříku u Městského soudu v Praze. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+    <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Roháčova 145/14, Žižkov, 130 00 Praha 3 zapsaný ve spolkovém rejstříku u Městského soudu v Praze. Demagog.cz má <a href="https://www.rb.cz/povinne-zverejnovane-informace/transparentni-ucty?mvcPath=transactions&accountNumber=9711283001&path=transactions">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
     <p><a href="/stranka/zasady-zpracovani-osobnich-udaju">Zásady zpracování osobních údajů</a></p>
   </div>
 </footer>
