Facebook factcheck article type

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -408,6 +408,7 @@ p.lead {
 
   &.factcheck { color: var(--true); }
   &.editorial { color: var(--orange); }
+  &.facebook-factcheck { color: #4267B2; }
   &.important { color: var(--steel); }
 
   &.important::after { content: ') '; }
