--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -13,12 +13,12 @@
 
   <div class="rest">
     <div class="speakers">
-      <% if article.article_type.name == "default" %>
+      <% if article.article_type.name == ArticleType::DEFAULT %>
         <% for speaker in article.unique_speakers %>
           <%= render(partial: 'shared/portrait', object: speaker, as: :speaker) %>
         <% end %>
       <% end %>
-      <% if article.article_type.name == "single_statement" %>
+      <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
         <%= render(partial: 'shared/portrait', object: article.single_statement.speaker, as: :speaker) %>
       <% end %>
     </div>
@@ -26,23 +26,28 @@
     <h2 class="s-title"><%= link_to(article.title, article_path(article), class: "title") %></h2>
 
     <p class="clickthrough">
-      <% if article.article_type.name == "default" %>
+      <% if article.article_type.name == ArticleType::DEFAULT %>
         <span class="label factcheck">Ověřeno</span>
         <% if article.source %>
           <i><%= article.source.medium.name %>, <%= raw(l(article.source.released_at, format: :long)) %></i>
         <% end %>
       <% end %>
 
-      <% if article.article_type.name == "static" %>
+      <% if article.article_type.name == ArticleType::STATIC %>
         <span class="label editorial">Komentář</span>
         <i><%= raw(l(article.published_at, format: :long)) %></i>
       <% end %>
 
-      <% if article.article_type.name == "single_statement" %>
+      <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
         <span class="label veracity <%= article.single_statement.approved_assessment.veracity.default_name %>">
           <%= article.single_statement.approved_assessment.veracity.name %>
         </span>
         <i><%= article.single_statement.source.medium.name %>, <%= raw(l(article.single_statement.source.released_at, format: :long)) %></i>
+      <% end %>
+
+      <% if article.article_type.name == ArticleType::FACEBOOK_FACTCHECK %>
+        <span class="label facebook-factcheck">Facebook factcheck</span>
+        <i><%= raw(l(article.published_at, format: :long)) %></i>
       <% end %>
 
       <% if article.perex %>
@@ -50,17 +55,17 @@
         <%= strip_tags(article.perex).truncate(230) %>
       <% end %>
 
-      <% if article.article_type.name == "single_statement" %>
+      <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
         &mdash;
         „<%= article.single_statement.content.strip %>“
       <% end %>
 
-      <% if article.article_type.name == "default" || article.article_type.name == "static" %>
+      <% if article.article_type.name == ArticleType::DEFAULT || article.article_type.name == ArticleType::STATIC || article.article_type.name == ArticleType::FACEBOOK_FACTCHECK %>
         <a href="<%= article_path(article) %>">
           <span>Číst&nbsp;dál&nbsp;&rarr;</span>
         </a>
       <% end %>
-      <% if article.article_type.name == "single_statement" %>
+      <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
         <a href="<%= statement_path(article.single_statement) %>">
           <span>Číst&nbsp;odůvodnění&nbsp;&rarr;</span>
         </a>
