Důležité výroky jsou nově Výběr Demagog.cz

--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -17,7 +17,7 @@
       <% end %>
 
       <% if statement.important? %>
-        <span class="important-statement-icon" title="Důležitý výrok">!</span>
+        <span class="important-statement-icon" title="Výběr Demagog.cz">!</span>
       <% end %>
     </blockquote>
 
