--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -16,7 +16,7 @@
       <% if @statement.important? %>
         <span class="important-statement-sign">
           <span class="important-statement-icon">!</span><br>
-          Důležitý výrok
+          Výběr Demagog.cz
         </span>
       <% end %>
     </blockquote>
